media/webrtc/signaling/src/media-conduit/VideoConduit.cpp
@@ -42,13 +42,15 @@ const unsigned int WebrtcVideoConduit::CODEC_PLNAME_SIZE = 32;
 /**
  * Factory Method for VideoConduit
  */
-mozilla::RefPtr<VideoSessionConduit> VideoSessionConduit::Create(VideoSessionConduit *aOther)
+mozilla::RefPtr<VideoSessionConduit>
+VideoSessionConduit::Create(VideoSessionConduit *aOther,
+                            bool receiving)
 {
   NS_ASSERTION(NS_IsMainThread(), "Only call on main thread");
   CSFLogDebug(logTag,  "%s ", __FUNCTION__);
 
   WebrtcVideoConduit* obj = new WebrtcVideoConduit();
-  if(obj->Init(static_cast<WebrtcVideoConduit*>(aOther)) != kMediaConduitNoError)
+  if(obj->Init(static_cast<WebrtcVideoConduit*>(aOther), receiving) != kMediaConduitNoError)
   {
     CSFLogError(logTag,  "%s VideoConduit Init Failed ", __FUNCTION__);
     delete obj;
@@ -284,7 +286,9 @@ bool WebrtcVideoConduit::GetRTCPSenderReport(DOMHighResTimeStamp* timestamp,
 /**
  * Performs initialization of the MANDATORY components of the Video Engine
  */
-MediaConduitErrorCode WebrtcVideoConduit::Init(WebrtcVideoConduit *other)
+MediaConduitErrorCode
+WebrtcVideoConduit::Init(WebrtcVideoConduit *other,
+                         bool receiving)
 {
   CSFLogDebug(logTag,  "%s this=%p other=%p", __FUNCTION__, this, other);
 
@@ -343,7 +347,8 @@ MediaConduitErrorCode WebrtcVideoConduit::Init(WebrtcVideoConduit *other)
 #endif
 
     // Per WebRTC APIs below function calls return nullptr on failure
-    if( !(mVideoEngine = webrtc::VideoEngine::Create()) )
+    mVideoEngine = webrtc::VideoEngine::Create();
+    if(!mVideoEngine)
     {
       CSFLogError(logTag, "%s Unable to create video engine ", __FUNCTION__);
       return kMediaConduitSessionNotInited;
@@ -444,14 +449,6 @@ MediaConduitErrorCode WebrtcVideoConduit::Init(WebrtcVideoConduit *other)
                   __FUNCTION__,mPtrViEBase->LastError());
       return kMediaConduitCaptureError;
     }
-
-    if(mPtrViERender->AddRenderer(mChannel,
-                                  webrtc::kVideoI420,
-                                  (webrtc::ExternalRenderer*) this) == -1)
-    {
-      CSFLogError(logTag, "%s Failed to added external renderer ", __FUNCTION__);
-      return kMediaConduitInvalidRenderer;
-    }
     // Set up some parameters, per juberti. Set MTU.
     if(mPtrViENetwork->SetMTU(mChannel, 1200) != 0)
     {
@@ -465,6 +462,15 @@ MediaConduitErrorCode WebrtcVideoConduit::Init(WebrtcVideoConduit *other)
       CSFLogError(logTag,  "%s RTCPStatus Failed %d ", __FUNCTION__,
                   mPtrViEBase->LastError());
       return kMediaConduitRTCPStatusError;
+    }
+  }
+
+  if (receiving) {
+    if (mPtrViERender->AddRenderer(mChannel,
+                                  webrtc::kVideoI420,
+                                  (webrtc::ExternalRenderer*) this) == -1) {
+        CSFLogError(logTag, "%s Failed to added external renderer ", __FUNCTION__);
+        return kMediaConduitInvalidRenderer;
     }
   }
 
